--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -132,11 +132,11 @@
                     </div>
                 </div>
 
-                <div class="ms-1 header-item d-none d-sm-flex">
+                <!-- <div class="ms-1 header-item d-none d-sm-flex">
                     <button type="button" class="btn btn-icon btn-topbar material-shadow-none btn-ghost-secondary rounded-circle" routerLink="/general/institution">
                         <i class='bx bxs-school fs-22'></i>
                     </button>
-                </div>
+                </div> -->
 
                 <div class="ms-1 header-item d-none d-sm-flex">
                     <button type="button" class="btn btn-icon btn-topbar material-shadow-none btn-ghost-secondary rounded-circle" data-toggle="fullscreen" (click)="fullscreen()">
@@ -161,14 +161,15 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
+                        <a class="dropdown-item" routerLink="/general/institution"><i class="bx bxs-school text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Institutions</span></a>
+                        <div class="dropdown-divider"></div>
                         <!-- <h6 class="dropdown-header">Welcome {{userData.familyName}}!</h6> -->
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-account-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Profile</span></a>
+                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span></a>
                         <!-- <a class="dropdown-item" routerLink="/"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a>
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">TaskBoard</span></a> -->
-                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-help-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Help</span></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" routerLink="/general/institution"><i class="bx bxs-school text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Create</span></a>
-                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span></a>
+                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-help-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Help</span></a>
                         <a class="dropdown-item" href="javascript: void(0);" (click)="logout()"><i class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span class="align-middle" data-key="t-logout">Logout</span></a>
                     </div>
                 </div>
