--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -56,8 +56,8 @@
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="closeCreateInstitutionModal()">Cancel</button>
-                    <button type="submit" class="btn btn-primary" id="add-btn">Create</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="closeCreateInstitutionModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
