--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -39,7 +39,7 @@
     <app-loading [loading]="loading"></app-loading>
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title">{{isCreateMode ? "Create" : "Update"}} Student</h5>
+            <h5 class="modal-title">{{isCreateMode ? "Register" : "Update"}} Student(s)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         
