add table to display rollovers

--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -19,6 +19,13 @@
                     </div>
                 </div>
             </div>
+            <generic-app-table 
+                [headers]="headers" 
+                [data]="rollOversToDisplay" 
+                [showActions]="false"  
+                [customTemplates]="{'rollOverDate': dateTemplate }">
+                <ng-template #dateTemplate let-date let-row="row">{{ date | date: 'longDate' }}</ng-template>
+         </generic-app-table>
         </div>
     </div>
 
