Make modal smaller for rollover delete

--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(deleteContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete Rollover</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(deleteContent, false)"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete Rollover</button>
                         </div>
                     </div>
                 </div>
