modify student enrollment student info modal

--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -11,7 +11,6 @@
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
                             <button (click)="addModal(content)" [disabled]="selectedEnrollments.length < 1" title="Enroll selected students" class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-swap-box-line align-bottom me-1"></i> Enroll</button>
-                            <!-- <button (click)="addModal(coursesContent)" [disabled]="selectedEnrollments.length < 1"  class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-stack-line align-bottom me-1"></i> Courses</button> -->
                             <button (click)="addModal(subjectsContent)" [disabled]="selectedEnrollments.length < 1"  class="btn btn-info add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-book-line align-bottom me-1"></i> Subjects</button>
                             <button (click)="onDeleteSubmit()" [disabled]="selectedEnrollments.length < 1" title="Deleted selected enrollments"  class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
                         </div>
@@ -101,7 +100,7 @@
 
     <ng-template #subjectsContent role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">Manage Subjects</h5>
+            <h5 class="modal-title" id="modalLabel">Student Subjects</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         <div class="col-xxl-12">
@@ -120,8 +119,8 @@
                             </div>
                             <div class="modal-footer">
                                 <div class="hstack gap-2 justify-content-end">
-                                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary"><i class="ri-add-line align-bottom me-1"></i> Add Subjects</button>
-                                    <button (click)=" onDeleteStudentSubjects()" class="btn btn-danger"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete Subjects</button>
+                                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary"><i class="ri-add-line align-bottom me-1"></i> Assign</button>
+                                    <button (click)=" onDeleteStudentSubjects()" class="btn btn-danger"><i class="ri-delete-bin-line align-bottom me-1"></i> Unassign</button>
                                 </div>
                             </div>
                         </form>
@@ -139,71 +138,38 @@
         </div>
     </ng-template>
 
-    <!-- <ng-template #coursesContent role="document" let-modal>
-        <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">Manage Courses</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
-        </div>
-        <form  class="tablelist-form" autocomplete="off" [formGroup]="studentCourseForm">
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label class="form-label">Courses <span class="text-danger"> *</span></label>
-                    <ng-select [items]="courses" bindLabel="name" bindValue="id" formControlName="courseId" placeholder="Select Course" [ngClass]="{ 'is-invalid': submitted && fStudentCourseForm['courseId'].invalid }"></ng-select>
-                    <div class="invalid-feedback">Please select course</div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <div class="hstack gap-2 justify-content-end">
-                    <button (click)="onCreateStudentCourse()" class="btn btn-primary">Add Course</button>
-                    <button (click)="onDeleteStudentCourse()" class="btn btn-danger">Delete Course</button>
-                </div>
-            </div>
-        </form>
-    </ng-template> -->
-
     <ng-template #studentInfo role="document" let-modal>
         <div class="modal-header p-3 bg-light">
             <h5 class="modal-title">{{selectedStudentEnrollment?.familyName}} {{selectedStudentEnrollment?.givenNames }} [{{selectedStudentEnrollment?.class}}-{{selectedStudentEnrollment?.year}}]</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="dismissStudentInfoModal()"></button>
         </div>
-        <div class="col-xxl-12">
             <form>
                 <div class="modal-body">
-                    <!-- <ul ngbNav #Justify="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
-                        <li [ngbNavItem]="1"><a ngbNavLink><span class="d-sm-block">Subjects</span></a>
-                            <ng-template ngbNavContent> -->
-                                    <div class="mb-3">
-                                        <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects"></ng-select>
-                                    </div>
-                                    <div class="card" id="student-subjects">
-                                        <generic-app-table 
-                                        [headers]="selectedStudentSubjectHeaders" 
-                                        [data]="selectedStudentSubjects" 
-                                        [showActions]="true"  
-                                        [showDelete]="true"
-                                        [showEdit]="false"
-                                        [showRowSelect]="false"
-                                        (deleteClicked)="onSelectedStudentDeleteClick($event)">
-                                    </generic-app-table>
-                                    </div>
-                            <!-- </ng-template>
-                        </li>
-                        <li [ngbNavItem]="2"><a ngbNavLink><span class="d-sm-block">Course</span></a>
-                            <ng-template ngbNavContent>
-                            </ng-template>
-                        </li>
-                    </ul>
-                    <div class="tab-content  text-muted">
-                        <div [ngbNavOutlet]="Justify"></div>
-                    </div> -->
+                    <div class="row g-3">
+                        <div class="col-lg-9">
+                            <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects to assign"></ng-select>
+                        </div>
+                        <div class="col-lg-3">
+                                <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary w-100"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
+                        </div>
+                        <div class="col-lg-12 card">
+                            <generic-app-table 
+                            [headers]="selectedStudentSubjectHeaders" 
+                            [data]="selectedStudentSubjects" 
+                            [showActions]="true"  
+                            [showDelete]="true"
+                            [showEdit]="false"
+                            [showRowSelect]="false"
+                            (deleteClicked)="onSelectedStudentDeleteClick($event)">
+                        </generic-app-table>
+                        </div>
+                    </div>
                 </div>
             </form>
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
-                <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary px-3"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
-                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print</button>
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissStudentInfoModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
             </div>
         </div>
-     </div>
     </ng-template>
 </div>
